--- a/plant_tracker/src/main/res/layout/tile_plant_recordable.xml
+++ b/plant_tracker/src/main/res/layout/tile_plant_recordable.xml
@@ -39,11 +39,11 @@
     <TextView
         android:id="@+id/recordableSummaryTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_alignStart="@+id/observEventTypeTextView"
         android:layout_below="@+id/observEventTypeTextView"
-        android:layout_toStartOf="@id/dataPointsImageView"
         android:layout_marginTop="12dp"
+        android:layout_toStartOf="@id/dataPointsImageView"
         android:paddingEnd="16dp"
         android:paddingStart="10dp"
         android:text="@string/loremipsum"
