--- a/plant_tracker/src/main/res/layout/layout_individual_plant.xml
+++ b/plant_tracker/src/main/res/layout/layout_individual_plant.xml
@@ -135,7 +135,7 @@
 
     <TextView
         android:id="@+id/textView38"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView36"
         android:layout_marginStart="5dp"
@@ -237,7 +237,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recordableEventListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/spinnerLayout"
         android:animationCache="false"
         android:background="@color/white"
