Fixed landscape crash related to work this past weekend.

--- a/plant_tracker/src/main/res/layout-land/layout_individual_plant.xml
+++ b/plant_tracker/src/main/res/layout-land/layout_individual_plant.xml
@@ -56,7 +56,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView47"
+                        android:id="@+id/parentPlantLabelTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -290,16 +290,14 @@
 
             </LinearLayout>
 
-            <ListView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/recordableEventListView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="9dp"
                 android:padding="5dp"
                 android:scrollbars="vertical"
-                android:stackFromBottom="true">
-
-            </ListView>
+                android:scrollingCache="true" />
         </LinearLayout>
     </LinearLayout>
 
