Added plant images to the plant list tiles. New experimental apk (group management disabled, fixed in next commit). Changed the plant listing view to use a RecyclerView instead of the ListView before. Expanded image for plant to entire size of tile. Removed unnecessary layouts in the plant tile.

--- a/plant_tracker/src/main/res/layout/layout_list_all_plants.xml
+++ b/plant_tracker/src/main/res/layout/layout_list_all_plants.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="56dp" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/plantListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
