--- a/plant_tracker/src/main/res/layout/tile_plant_list.xml
+++ b/plant_tracker/src/main/res/layout/tile_plant_list.xml
@@ -4,64 +4,77 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:padding="6dip">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout10"
-        android:layout_width="300dp"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/secondLine"
-            android:layout_width="fill_parent"
-            android:layout_height="20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/firstLine"
-            android:layout_toEndOf="@+id/icon"
-            android:ellipsize="marquee"
-            android:gravity="top"
-            android:singleLine="true"
-            android:text="@string/description"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/firstLine"
-            android:layout_width="fill_parent"
-            android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/icon"
-            android:gravity="center_vertical"
-            android:text="Example application"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="6dip"
-            android:src="@drawable/ic_growing_plant" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout9"
+    <ImageView
+        android:id="@+id/plantPreview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="75dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/relativeLayout10">
+        android:maxHeight="75dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_growing_plant" />
 
-        <TextView
-            android:id="@+id/archivedTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:alpha="0.75"
-            android:gravity="right|center_vertical"
-            android:paddingRight="5dp"
-            android:text="Archived"
-            android:visibility="visible" />
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/firstLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="Example application"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/secondLine"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/firstLine"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="5dp"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:text="@string/description"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/archivedTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp"
+        android:alpha="0.75"
+        android:text="Archived"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:visibility="visible" />
+
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/relativeLayout9"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_toEndOf="@+id/relativeLayout10">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/archivedTextView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:alpha="0.75"-->
+            <!--android:gravity="right|center_vertical"-->
+            <!--android:paddingEnd="5dp"-->
+            <!--android:text="Archived"-->
+            <!--android:visibility="visible" />-->
+    <!--</RelativeLayout>-->
 
 
 </RelativeLayout>
