Added toolbar to and cleaned up the group management activity view & code.

--- a/plant_tracker/src/main/res/layout/activity_group_management.xml
+++ b/plant_tracker/src/main/res/layout/activity_group_management.xml
@@ -3,22 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/groupListView"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/gmToolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="15dp"
         android:clickable="true"
         android:focusable="true"
-        app:backgroundTint="@color/colorPrimaryDark"
-        app:srcCompat="@drawable/ic_add" />
+        app:backgroundTint="@color/white"
+        app:srcCompat="@drawable/ic_add"
+        android:layout_marginEnd="7dp"
+        android:layout_marginTop="7dp"
+        app:fabSize="mini"
+        />
+
+    <ListView
+        android:id="@+id/groupListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/gmToolbar"/>
+
 </RelativeLayout>
