Added plant copy functionality. This will duplicate a plant and if it ends with \.\d+$ pattern it'll expand that. This functionality is intended to make cloning easier to document.  When you take a cutting you are cloning the plant. All of the cuttings for plant A are kept as Plant A.1 until rooting has finished.  When you're ready to pot and track them individually you can copy them.  If there were 3 rooted cuttings you will make 3 copies and you'll have identical records for Plant A.1 represented as Plant A.1, Plant A.2, Plant A.3.

--- a/plant_tracker/src/main/res/menu/plant_tracker_ui.xml
+++ b/plant_tracker/src/main/res/menu/plant_tracker_ui.xml
@@ -31,14 +31,14 @@
             android:title="@string/plant_opt_clone_plant"
             android:visible="true"
             app:showAsAction="never" />
-        <!--<item-->
-            <!--android:id="@+id/action_copy"-->
-            <!--android:checkable="false"-->
-            <!--android:enabled="true"-->
-            <!--android:orderInCategory="100"-->
-            <!--android:title="@string/action_copy"-->
-            <!--android:visible="true"-->
-            <!--app:showAsAction="never" />-->
+        <item
+            android:id="@+id/action_copy"
+            android:checkable="false"
+            android:enabled="true"
+            android:orderInCategory="100"
+            android:title="@string/action_copy"
+            android:visible="true"
+            app:showAsAction="never" />
         <!--<item-->
             <!--android:id="@+id/action_set_reminder"-->
             <!--android:checkable="false"-->
