--- a/plant_tracker/src/main/res/layout/dialog_about.xml
+++ b/plant_tracker/src/main/res/layout/dialog_about.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/textView19"
                 android:layout_below="@+id/textView19"
-                android:text="Copyright 2017-2018" />
+                android:text="@string/app_copyright" />
 
             <ImageView
                 android:id="@+id/imageView4"
