--- a/plant_tracker/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
+++ b/plant_tracker/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
@@ -46,17 +46,13 @@
     <item android:title="@string/drawer_title_transfer">
         <menu>
             <item
+                android:id="@+id/nav_sync_settings"
+                android:icon="@drawable/ic_export"
+                android:title="@string/drawer_item_sync_settings" />
+            <item
                 android:id="@+id/nav_backup"
                 android:icon="@drawable/ic_export"
-                android:title="@string/drawer_item_backup" />
-            <item
-                android:id="@+id/nav_export"
-                android:icon="@drawable/ic_export"
-                android:title="@string/drawer_item_export" />
-            <item
-                android:id="@+id/nav_import"
-                android:icon="@drawable/ic_import"
-                android:title="@string/drawer_item_import" />
+                android:title="@string/drawer_item_sync" />
         </menu>
     </item>
 
